# mlfp

./: .gitignore  ExSheet1.ipynb  ExSheet2.ipynb  ExSheet3.ipynb  README.md  environment.yml  pyproject.toml
mici/: New notebook (1).ipynb  New notebook.ipynb
project/: .gitignore  MiniBooNE.ipynb  Photometric Redshift.ipynb  Superconductor_ordenado.ipynb  magic.ipynb
