[tool.poetry]
name = "mlfp"
version = "0.1.0"
description = "Homework for \"Machine Learning for Physicists\" lecture at Stockholm University 2021."
authors = ["Ludwig Neste <ludwig.neste@tu-dortmund.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21"
matplotlib = "^3.5"
scipy = "^1.7"
pandas = "^1.3"
seaborn = "^0.11"
scikit-learn = "^1.0"
ipython = "^7.29"
jupyter = "^1.0"
tensorflow = "^2.7"
Theano = "^1.0"
pydot = "^1.4.2"
xgboost = "^1.5.1"

[tool.poetry.dev-dependencies]
nbconvert = {extras = ["webpdf"], version = "^6.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
